# trae3

10/: Cargo.toml  README.md
10/config/: config.yaml  rules.yaml
10/src/: main.rs
10/src/cli/: mod.rs
10/src/cluster/: mod.rs  ssh.rs
10/src/collector/: metrics.rs  mod.rs
10/src/config/: mod.rs
10/src/output/: mod.rs  report.rs
10/src/rules/: mod.rs  validator.rs
10/src/scheduler/: mod.rs  task.rs
11/: .env.development  .env.production  README.md  package.json
12/: .gitignore  docker-compose.yml  pom.xml
14/: config.py  db_manager.py  grid_mesh.py  grid_mesh.pyx  main.py  meteo_importer.py  requirements.txt  setup.py  task_queue.py  test_integration.py  turbulence_solver.py  turbulence_solver.pyx  viz_export.py
16/: .gitignore  package-lock.json  package.json  tsconfig.backend.json  tsconfig.json  tsconfig.main.json  vite.config.ts
18/: docker-compose.yml
19/: README.md  package.json
2/: README.md  go.mod  go.sum  main.go
20/: README.md  config.yaml  go.mod  go.sum
21/: package-lock.json  package.json
22/: Dockerfile  docker-compose.yml  nginx.conf  pom.xml
23/: .gitignore  README.md
24/: README.md  chamber_manager.py  config.py  dashboard_server.py  database.py  fem_solver.py  integration_test.py  main.py  mesh_generator.py  parameter_import.py  requirements.txt  result_exporter.py  sensor_processor.py  task_scheduler.py  timeseries_engine.py  utils.py
25/: PolarResearch.sln
26/: package-lock.json  package.json
27/: README.md  requirements.txt
28/: README.md
29/: CODE_STANDARDS.md  README.md  start-all.bat  start-backend.bat  start-frontend.bat
3/: README.md  (+1 more)
30/iot-gw-ops/: Cargo.toml
30/iot-gw-ops/.cargo/: config.toml
30/iot-gw-ops/src/: main.rs
30/iot-gw-ops/src/modules/: config.rs  metrics.rs  mod.rs  remote.rs  report.rs  scheduler.rs  validator.rs
76/: config.yaml  exceptions.py  pyproject.toml  requirements.txt
76/api/: __init__.py  optimizer.py
76/api/program_library/: __init__.py  client.py  models.py
76/api/version_database/: __init__.py  client.py  models.py
76/app/: __init__.py  main.py
76/app/gui/: __init__.py  cache_panel.py  main_window.py  main_window_enhanced.py  simulator_panel.py  sync_panel.py  theme.py  version_panel.py
76/core/: __init__.py  batch_export.py  syntax_checker.py
76/core/cache/: __init__.py  local_cache.py  policy.py  store.py
76/core/simulator/: __init__.py  engine.py  high_perf.py  models.py  runner.py
76/core/sync/: __init__.py  cloud_sync.py  conflict.py  queue.py
76/core/version/: __init__.py  differ.py  manager.py  schema.py
76/utils/: __init__.py  config.py  crypto.py  logger.py  platform.py
86/src-tauri/: Cargo.toml  tauri.conf.json
86/src-tauri/src/: crypto.rs  database.rs  diff.rs  file_manager.rs  main.rs  models.rs  parser.rs  sync.rs  syntax.rs
(+3634 files in other folders)
