[package]
name = "cluster-inspector"
version = "1.0.0"
edition = "2021"
description = "服务器集群巡检自动化命令行工具集"
authors = ["Cluster Inspector Team"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
regex = "1.10"
colored = "2.1"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
