[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sim-platform"
version = "1.0.0"
description = "跨平台桌面仿真程序管理平台"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "requests>=2.31",
    "PyYAML>=6.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
sim-platform = "app.main:entry_point"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
