[package]
name = "iot-gw-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
indicatif = "0.17"
cron = "0.12"
rayon = "1.8"
