[package]
name = "script-workstation"
version = "1.0.0"
description = "跨平台脚本工作站"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
regex = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
base64 = "0.21.7"
rayon = "1.8.0"
once_cell = "1.19.0"
diff = "0.1.13"
similar = "2.5.0"
rand = "0.8.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
